# playground

./: .rustfmt.toml  Cargo.toml  README.md  config.json  config_simple.json
.github/workflows/: prim.yml
argon/: Cargo.toml
argon-driver/: Cargo.toml
argon-driver/src/: cli.rs  error.rs  main.rs
argon-plugin/: Cargo.toml
argon-plugin-registry/: Cargo.toml
argon-plugin-registry/src/: lib.rs
argon-plugin/src/: lib.rs
argon-rack/: Cargo.toml
argon-rack/src/: error.rs  layout.rs  lib.rs
argon-slot/: Cargo.toml
argon-slot-log/: Cargo.toml
argon-slot-log/src/: lib.rs
argon-slot-ping/: Cargo.toml
argon-slot-ping/src/: lib.rs
argon-slot/src/: async.rs  config.rs  error.rs  lib.rs  sync.rs  traits.rs
argon-slot/src/processor/: async.rs  mod.rs  packet.rs  result.rs  sync.rs
argon-slot/src/processor/ffi/: async.rs  mod.rs  sync.rs
argon-slot/src/worker/: async.rs  error.rs  handle.rs  mod.rs  sync.rs
argon-slots/: Cargo.toml
argon-slots/src/: lib.rs  log.rs  ping.rs
argon-slots/src/log/: mod.rs
argon-slots/src/ping/: async.rs  mod.rs  parallel.rs  sequential.rs  sync.rs
argon-tun/: Cargo.toml
argon-tun/src/: cli.rs  main.rs
argon/src/: constants.rs  device.rs  error.rs  lib.rs  rotary.rs
argon/src/config/: mod.rs
argon/src/rack/: layout.rs  mod.rs  runner.rs  types.rs  util.rs
argon/src/rack/slot/: builder.rs
argon/src/runner/: async.rs  config.rs  error.rs  handle.rs  mod.rs  parallel.rs  sequential.rs  sync.rs  traits.rs
argon/src/slot/: async.rs  builder.rs  config.rs  event.rs  handle.rs  mod.rs  parallel.rs  process.rs  sequential.rs  sync.rs  traits.rs
argon/src/slot/worker/: error.rs  mod.rs
src/: device.rs  error.rs  main.rs  rack.rs
src/rack/: mod.rs  runner.rs  slot.rs  slot_builder.rs  slot_handle.rs
src/rack/slot/: builder.rs  config.rs  handle.rs  mod.rs
src/slots/: log.rs  ping.rs
