[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.3.2", features = ["derive"] }
futures = "=0.3.28"
packet = "=0.1.4"
thiserror = { version = "=1.0.38" }
tokio = { version = "=1.29.1", features = ["rt-multi-thread"] }
tokio-util = { version = "=0.6.10" }
tun = { version = "=0.5.5", features = ["async"] }
