[workspace]
members = [
    "argon",
    "argon-slots",
    "argon-driver",
]

[workspace.dependencies]
async-trait = "=0.1.67"
clap = "=4.3.2"
flume = "=0.10.14"
futures = "=0.3.28"
nonempty = "=0.8.1"
num_cpus = "=1.16.0"
packet = "=0.1.4"
thiserror = "=1.0.38"
tokio = "=1.29.1"
tokio-util = "=0.6.10"
tun = "=0.5.5"
