[workspace]
members = [
    "argon",
    "argon-driver",
    "argon-plugin",
    "argon-plugin-registry",
    "argon-rack",
    "argon-slot",
    "argon-slot-ping",
    "argon-slot-log",
]

[workspace.dependencies]
async-trait = "=0.1.67"
clap = "=4.3.2"
flume = "=0.10.14"
futures = "=0.3.28"
gcd = "=2.3.0"
itertools = "=0.10.5"
libloading = "=0.8.0"
nonempty = "=0.8.1"
num_cpus = "=1.16.0"
packet = "=0.1.4"
serde = "=1.0.171"
serde_derive = "=1.0.171"
serde_json = "=1.0.103"
thiserror = "=1.0.38"
tokio = "=1.29.1"
tokio-util = "=0.6.10"
toml = "=0.5.11"
tun = "=0.5.5"
