[package]
name = "argon-slot-ping"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon-plugin = { path = "../argon-plugin" }
argon-slot = { path = "../argon-slot" }

async-trait = { workspace = true }
packet = { workspace = true }
tun = { workspace = true }
