[package]
name = "argon"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = { workspace = true}
async-trait = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
packet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tun = { workspace = true, features = ["async"] }
