[package]
name = "argon"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
flume = { workspace = true}
gcd = { workspace = true }
itertools = { workspace = true }
nonempty = { workspace = true }
num_cpus = { workspace = true }
packet = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tun = { workspace = true, features = ["async"] }
